completed l3ex2 of data pipelines

--- a/1-Cloud-Data-Warehouses/Exercises/Lesson3_Ex2_IaC.ipynb
+++ b/1-Cloud-Data-Warehouses/Exercises/Lesson3_Ex2_IaC.ipynb
@@ -649,9 +649,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cluster': {'ClusterIdentifier': 'dwhcluster',\n",
+       "  'NodeType': 'dc2.large',\n",
+       "  'ClusterStatus': 'deleting',\n",
+       "  'ClusterAvailabilityStatus': 'Modifying',\n",
+       "  'MasterUsername': 'dwhuser',\n",
+       "  'DBName': 'dwh',\n",
+       "  'Endpoint': {'Address': 'dwhcluster.cesxmyplt4of.us-west-2.redshift.amazonaws.com',\n",
+       "   'Port': 5439},\n",
+       "  'ClusterCreateTime': datetime.datetime(2020, 2, 7, 3, 0, 31, 567000, tzinfo=tzutc()),\n",
+       "  'AutomatedSnapshotRetentionPeriod': 1,\n",
+       "  'ManualSnapshotRetentionPeriod': -1,\n",
+       "  'ClusterSecurityGroups': [],\n",
+       "  'VpcSecurityGroups': [{'VpcSecurityGroupId': 'sg-d420248c',\n",
+       "    'Status': 'active'}],\n",
+       "  'ClusterParameterGroups': [{'ParameterGroupName': 'default.redshift-1.0',\n",
+       "    'ParameterApplyStatus': 'in-sync'}],\n",
+       "  'ClusterSubnetGroupName': 'default',\n",
+       "  'VpcId': 'vpc-d4b32dac',\n",
+       "  'AvailabilityZone': 'us-west-2b',\n",
+       "  'PreferredMaintenanceWindow': 'thu:12:00-thu:12:30',\n",
+       "  'PendingModifiedValues': {},\n",
+       "  'ClusterVersion': '1.0',\n",
+       "  'AllowVersionUpgrade': True,\n",
+       "  'NumberOfNodes': 4,\n",
+       "  'PubliclyAccessible': True,\n",
+       "  'Encrypted': False,\n",
+       "  'Tags': [],\n",
+       "  'EnhancedVpcRouting': False,\n",
+       "  'IamRoles': [{'IamRoleArn': 'arn:aws:iam::009189615544:role/dwhRole',\n",
+       "    'ApplyStatus': 'in-sync'}],\n",
+       "  'MaintenanceTrackName': 'current',\n",
+       "  'DeferredMaintenanceWindows': [],\n",
+       "  'NextMaintenanceWindowStartTime': datetime.datetime(2020, 2, 13, 12, 0, tzinfo=tzutc())},\n",
+       " 'ResponseMetadata': {'RequestId': 'ca7f6f57-4e0a-11ea-8681-0f765c7dfbf7',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'ca7f6f57-4e0a-11ea-8681-0f765c7dfbf7',\n",
+       "   'content-type': 'text/xml',\n",
+       "   'content-length': '2382',\n",
+       "   'vary': 'Accept-Encoding',\n",
+       "   'date': 'Thu, 13 Feb 2020 02:44:43 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#### CAREFUL!!\n",
     "#-- Uncomment & run to delete the created resources\n",
@@ -668,9 +719,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Key</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ClusterIdentifier</td>\n",
+       "      <td>dwhcluster</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NodeType</td>\n",
+       "      <td>dc2.large</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ClusterStatus</td>\n",
+       "      <td>deleting</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MasterUsername</td>\n",
+       "      <td>dwhuser</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>DBName</td>\n",
+       "      <td>dwh</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Endpoint</td>\n",
+       "      <td>{'Address': 'dwhcluster.cesxmyplt4of.us-west-2...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>VpcId</td>\n",
+       "      <td>vpc-d4b32dac</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NumberOfNodes</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Key                                              Value\n",
+       "0  ClusterIdentifier                                         dwhcluster\n",
+       "1           NodeType                                          dc2.large\n",
+       "2      ClusterStatus                                           deleting\n",
+       "3     MasterUsername                                            dwhuser\n",
+       "4             DBName                                                dwh\n",
+       "5           Endpoint  {'Address': 'dwhcluster.cesxmyplt4of.us-west-2...\n",
+       "6              VpcId                                       vpc-d4b32dac\n",
+       "7      NumberOfNodes                                                  4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "myClusterProps = redshift.describe_clusters(ClusterIdentifier=DWH_CLUSTER_IDENTIFIER)['Clusters'][0]\n",
     "prettyRedshiftProps(myClusterProps)"
@@ -678,9 +816,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ResponseMetadata': {'RequestId': 'b271376a-67c4-443c-a9f0-be53dc92b2dc',\n",
+       "  'HTTPStatusCode': 200,\n",
+       "  'HTTPHeaders': {'x-amzn-requestid': 'b271376a-67c4-443c-a9f0-be53dc92b2dc',\n",
+       "   'content-type': 'text/xml',\n",
+       "   'content-length': '200',\n",
+       "   'date': 'Thu, 13 Feb 2020 02:44:55 GMT'},\n",
+       "  'RetryAttempts': 0}}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#### CAREFUL!!\n",
     "#-- Uncomment & run to delete the created resources\n",
