reviewed & finalized cassandra project

--- a/sparkify_data_model_cassandra/main.ipynb
+++ b/sparkify_data_model_cassandra/main.ipynb
@@ -67,7 +67,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/keneudeh/Documents/Projects/udacity-data-engineer-nanodegree/0-Data-Modeling/Projects/sparkify-data-etl-cassandra\n",
+      "/Users/keneudeh/Documents/Projects/udacity-dend-projects/sparkify_data_model_cassandra\n",
       "Num lines: 6821\n"
      ]
     },
@@ -251,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x11ca929d0>"
+       "<cassandra.cluster.ResultSet at 0x11069f850>"
       ]
      },
      "execution_count": 7,
@@ -349,7 +349,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x119f976d0>"
+       "<cassandra.cluster.ResultSet at 0x110e3ea90>"
       ]
      },
      "execution_count": 10,
@@ -486,7 +486,7 @@
     {
      "data": {
       "text/plain": [
-       "<cassandra.cluster.ResultSet at 0x11bbb4650>"
+       "<cassandra.cluster.ResultSet at 0x10fe6ef90>"
       ]
      },
      "execution_count": 13,
